Direct links to art, don't CSS blur on mobile + fixes

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -26,33 +26,6 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 0.75rem;
 }
 
-.chevron {
-    display: inline-block;
-    margin-left: .255em;
-    vertical-align: .255em;
-    content: "";
-    border-top: .255em solid;
-    border-right: .255em solid transparent;
-    border-bottom: 0;
-    border-left: .255em solid transparent;
-    color: inherit;
-}
-
-div.bg-blur {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    border-radius: 10px;
-
-    background-attachment: fixed;
-    background-position-x: 20%;
-    background-size: cover;
-    filter: blur(5px);
-    z-index: -1;
-}
-
 button, .btn {
     background: transparent;
     border-radius: 5px;
