--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -22,6 +22,7 @@
     --switch-checked-background-color: var(--primary);
 
     --page-background: url('/img/bg.webp');
+    --page-background-blur: url('/img/bg-blur.webp'); /* fuck you phones */
 
     --background-hover: rgba(255, 255, 255, 0.4);
     --background-active: rgba(255, 255, 255, 0.3);
